package pt.ipp.isep.dei.esoft.project.ui.gui;
import javafx.fxml.FXML;
import javafx.scene.control.DatePicker;
import java.awt.*;

public class RegisterCollaboratorUI {

    @FXML
    private TextArea txtName;

    @FXML
    private DatePicker dpBirthDate;


}
